<resources>
    <string name="app_name">Socorra-Me</string>
    <string name="app_logo">Logo do app</string>
    <string name="wellcome">Obrigado por baixar o nosso aplicativo. Vamos começar conhecendo algumas de suas funcionalidades.</string>
    <string name="advance">Avançar</string>
    <string name="imagem_em_cartoon_de_um_policial">Imagem em cartoon de um policial</string>
    <string name="imagem_em_cartoon_de_um_bombeiro">Imagem em cartoon de um bombeiro</string>
    <string name="imagem_em_cartoon_de_uma_ambulancia">Imagem em cartoon de uma ambulância</string>
    <string name="police_intro">Chame a viatura mais próxima de maneira rápida. Lembre-se é claro de não expor seu dispositivo para meliantes, sua segurança deve vir em primeiro lugar.</string>
    <string name="ambulance_into">Em certos momento você poderá ajudar alguém através de seu dispositivo solicitando uma ambulância</string>
    <string name="fireman_intro">Em caso de incêndio você também poderá contar com o nosso app para solicitar o corpo de bombeiros</string>
    <string name="login_prev">Agora que você conhece melhor o nosso app, pode começar a aproveitá-lo, bastando apenas entrar em sua conta.\nCaso não tenha, você poderá criar rapidamente.</string>
    <string name="continuar_para_o_app">Continuar para o app</string>
    <string name="entrar">Entrar</string>
    <string name="login">Login</string>
    <string name="n_o_possui_conta_cadastre_se">Não possui conta? Cadastre-se.</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="deslize_para_continuar">Deslize para continuar</string>
    <string name="logo_do_app_com_uma_sirene">Logo do app com uma sirene</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="para_criar_sua_conta_basta_preencher_corretamente_os_campos_abaixo">Para criar sua conta, basta preencher corretamente os campos abaixo</string>
    <string name="nome_completo">Nome completo</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="cadastrar_se">Cadastrar-se</string>
    <string name="cpf">CPF</string>
    <string name="title_activity_application">ApplicationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="perfil">Perfil</string>
    <string name="utilit_rios">Utilitários</string>
    <string name="ajuda">Ajuda</string>
    <string name="sobre">Sobre</string>
    <string name="sair">Sair</string>
    <string name="solicitar_socorro">Solicitar socorro</string>
    <string name="alterar_conta">Alterar conta</string>
    <string name="contatos_de_emerg_ncia">Contatos de emergência</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chamar_pol_cia">Chamar polícia</string>
    <string name="pe_a_socorro_rapidamente_clicando_em_um_dos_bot_es_abaixo">Peça socorro rapidamente clicando em um dos botões abaixo</string>
    <string name="chamar_ambul_ncia">Chamar ambulância</string>
    <string name="chamar_bombeiros">Chamar bombeiros</string>
    <string name="chamar_contato">Chamar contato</string>
    <string name="configura_es">Configurações</string>
    <string name="main_dev_email">gladsonsouza@live.com</string>
    <string name="processando_por_favor_aguarde">Processando, por favor aguarde...</string>
    <string name="nome">Nome</string>
    <string name="number_example">(00) 0000-0000</string>
    <string name="imagem_do_contato_de_emerg_ncia">Imagem do contato de emergência.</string>
    <string name="gerenciar_contatos">Gerenciar Contatos</string>
    <string name="ainda_n_o_possui_conta">Ainda não possui conta?</string>
</resources>
