<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp">

    <ImageView
        android:id="@+id/imageContactPhoto"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/imagem_do_contato_de_emerg_ncia"
        app:srcCompat="@drawable/logo_sc_no_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/textContactName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textContactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_example" />
    </LinearLayout>
</LinearLayout>